# ipk-exercises

./: .gitignore  test.cc
ipk-exercises/Ü2/: 1.cc  2.cc  3.cc
ipk-exercises/Ü3/: Aufgabe2.cc
ipk-exercises/Ü4/: CMakeLists.txt  uniform.cc
ipk-exercises/Ü5/: lint.cc
Ü1/: helloWorld  helloWorld.cc
Ü2/: 1  2  3  4  4.cc  a.cc
Ü3/: 1  1.cc  2  2a.cc  Bsp Programm  q  vector.cc
Ü4/: .uniform.cc.swp  normal.cc  readvector.cc  statistics.cc  statistics.hh
Ü5/: 1  1.cc  CMakeLists.txt  checkparens.cc  lint.hh
Ü6/: -o  CMakeLists.txt  canvas.cc  canvas.hh  main.cc  pgm.cc  pgm.hh  plot.cc  point.cc  point.hh
Ü7/: 1.cc  CMakeLists.txt  histo.cc  histogram.cc  histogram.hh  letterfrequencies  letterfrequencies.cc  romeoXjuliet.txt  wordfrequencies.cc
Ü8/: CMakeLists.txt  iteration_result.cc  iteration_result.hh  mn.cc  pgm.cc  point.hh
